2011-10-12  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2011-10-12  Nico Weber  <thakis@chromium.org>

        [chromium] Add a setSelectionToRange() method to WebFrame.
        https://bugs.webkit.org/show_bug.cgi?id=69846

        Also add a method to WebRange to create a range given a frame and an
        interval.

        This will be used to implement the "replacement range" feature of OS X
        IMEs, see http://codereview.chromium.org/8227018 (the change to
        render_widget.cc).
        The renderer will set the selection to the replacement range before
        calling confirmComposition(). This matches how WK2 does this, see
        Source/WebKit2/WebProcess/WebPage/mac/WebPageMac.mm,
        WebPage::setComposition(). The function convertToRange() was taken
        from there, too.

        Reviewed by Darin Fisher.

        * public/WebFrame.h:
        (WebKit::WebFrame::setSelectionToRange):
        * src/WebFrameImpl.cpp:
        (WebKit::WebViewImpl::setSelectionToRange):
        * src/WebFrameImpl.h:
        (WebKit::WebViewImpl::setSelectionToRange):
        * src/WebRange.cpp:
        (WebRange::fromGlobalRange):
        * src/WebRange.h:
        (WebRange::fromGlobalRange):

2011-10-12  Sergey Glazunov  <serg.glazunov@gmail.com>

        ScriptController::executeIfJavaScriptURL gets confused by synchronous frame loads
        https://bugs.webkit.org/show_bug.cgi?id=69777

        Reviewed by Adam Barth.

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::loadJavaScriptURL):

2011-10-12  Yury Semikhatsky  <yurys@chromium.org>

        [Chromium] Web Inspector: testPauseWhenLoadingDevTools is broken
        https://bugs.webkit.org/show_bug.cgi?id=69934

        Reviewed by Pavel Feldman.

        * src/js/Tests.js:

2011-10-12  Cary Clark  <caryclark@google.com>

        [Chromium] Prevent fallback fonts from purging while measuring